--- a/src/Components/ContactForm/contactForm.module.css
+++ b/src/Components/ContactForm/contactForm.module.css
@@ -1,6 +1,10 @@
 .form {
   display: inline-flex;
   flex-direction: column;
+  border: 1px solid black;
+  background-color: #e1e1e1d1;
+  padding: 15px;
+  border-radius: 8px;
   gap: 15px;
   margin-bottom: 30px;
 }
@@ -14,4 +18,24 @@
   display: flex;
   flex-direction: column;
   gap: 5px;
+}
+
+.input {
+  height: 30px;
+  border-radius: 4px;
+  padding: 0 15px;
+  border: 1px solid black;
+  outline: none;
+}
+
+.button {
+  background-color: #d8d8d8;
+  border: 1px solid black;
+  border-radius: 4px;
+  cursor: pointer;
+  padding: 2px 0;
+}
+
+.button:disabled {
+  border: 1px solid rgb(190, 187, 187);
 }
